04-built-in-resource-types/Ingress/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-minimal
  namespace: 04--ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pod-label
  template:
    metadata:
      labels:
        app: nginx-pod-label
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.5-alpine
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            limits:
              memory: "500Mi"
            requests:
              memory: "500Mi"
              cpu: "1"
